Mejoras para el correcto manejo de clases desde el CSS y prescindir de los id

--- a/contacto.html
+++ b/contacto.html
@@ -16,16 +16,17 @@
     Darle flex para que el mapa aparezca a la derecha de los datos de contacto.
     media-query que aparezca debajo de los datos de contacto.
 -->
+
 <body>
     <section class="main-section" id="contacto">
-        <header>
-            <h2>Contacto</h2>
+        <header id="contacto-header" class="main-header">
+            <h2 class="subtitulo-h2">Contacto</h2>
         </header>
         <article>
-            <p>Comisión de Obras Res. N.º 1/2003</p>
-            <p>Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
-            <p>Tel: +54 11 4319-3746</p>
-            <p>
+            <p class="p-content">Comisión de Obras Res. N.º 1/2003</p>
+            <p class="p-content">Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
+            <p class="p-content">Tel: +54 11 4319-3746</p>
+            <p class="p-content">
                 Av. Eduardo Madero 942, 16.º, dcha.<br>
                 (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
                 Argentina
