--- a/financiacion.html
+++ b/financiacion.html
@@ -15,11 +15,11 @@
 
 <body>
     <section class="main-section" id="financiacion-y-pago">
-        <header>
-            <h2>Financiación y pago</h2>
+        <header id="financiamiento-header" class="main-header">
+            <h2 class="subtitulo-h2">Financiación y pago</h2>
         </header>
         <article>
-            <p>
+            <p class="p-content">
                 La financiación y pago de las obras dependen de su encuadramiento, no obstante que en la casi
                 totalidad
                 de los casos se utilizan los recursos no comprometidos y disponibles en la Cuenta y Subcuentas de
@@ -27,7 +27,7 @@
                 ELECTRICO MAYORISTA (MEM), en la medida que no estén afectados a otros destinos o usos regulatorios
                 predefinidos.
             </p>
-            <p>
+            <p class="p-content">
                 Otras fuentes de financiamiento las constituyen aportes vinculados a las demandas específicas que se
                 atienden con las obras, sean estos provenientes de gobiernos provinciales, o a partir de cargos
                 específicos a incluir o incluidos en la tarifa del servicio eléctrico.
@@ -41,31 +41,35 @@
                 vencida establecida por el Banco de la Nación Argentina (BNA) para sus operaciones de descuento de
                 documentos a 30 días de plazo.
             </p>
-            <p>
+            <p class="p-content">
                 La responsabilidad en el pago de estas cuotas depende del tipo de obra, previéndose las siguientes
                 asignaciones:
             </p>
 
-            <p>
-                <b>OBRAS DE ADECUACION:</b> Todos los agentes demandantes, incluida la demanda de exportación, en
+            <p class="p-content">
+                <span class="bold-content">OBRAS DE ADECUACION:</span> Todos los agentes demandantes, incluida la
+                demanda de exportación, en
                 proporción a su participación en el pago de los cargos por Servicios a la Potencia.
             </p>
 
-            <p>
-                <b>OBRAS DE SEGURIDAD DE ABASTECIMIENTO:</b> SETENTA POR CIENTO (70 %) a los agentes demandantes,
+            <p class="p-content">
+                <span class="bold-content">OBRAS DE SEGURIDAD DE ABASTECIMIENTO:</span> SETENTA POR CIENTO (70 %) a los
+                agentes demandantes,
                 incluida
                 la demanda de exportación, en proporción a su participación en el pago de los cargos por Servicios
                 Asociados a la Potencia; y TREINTA POR CIENTO (30 %) a los agentes demandantes definidos como
                 beneficiarios de las obras.
             </p>
 
-            <p>
-                <b>OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 938/2004:</b> Los agentes definidos como beneficiarios
+            <p class="p-content">
+                <span class="bold-content">OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 938/2004:</span> Los agentes
+                definidos como beneficiarios
                 de las
                 obras.
             </p>
-            <p>
-                <b>OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 821/2006:</b> SETENTA POR CIENTO (70 %) a los agentes
+            <p class="p-content">
+                <span class="bold-content">OBRAS DEFINIDAS POR LA RESOLUCION S.E. N.º 821/2006:</span> SETENTA POR
+                CIENTO (70 %) a los agentes
                 demandantes,
                 incluida la demanda de exportación, en
                 proporción a su participación en el pago de los cargos por Servicios Asociados a la Potencia; y
@@ -80,4 +84,5 @@
         Volver
     </a>
 </footer>
+
 </html>
