--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 -->
   <nav id="navbar">
     <header id="documentacion-header" class="nav-header">Documentación</header>
-    <ul>
+    <ul class="ul-nav">
       <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
       <li>
         <a class="nav-link" href="#operatoria-res1">Operatoria Res. S.E. N.º 1/2003</a>
@@ -46,17 +46,17 @@
       </li>
     </ul>
     <header id="financiamiento-header" class="nav-header">Financiamiento</header>
-    <ul>
+    <ul class="ul-nav">
       <li><a class="nav-link" href="./financiacion.html">Financiación y pago</a></li>
     </ul>
     <header id="licitaciones-header" class="nav-header">Licitaciones en curso</header>
-    <ul>
+    <ul class="ul-nav">
       <li>
         <a class="nav-link" href="./licitaciones.html">Licitaciones</a>
       </li>
     </ul>
     <header id="contacto-header" class="nav-header">Contacto</header>
-    <ul>
+    <ul class="ul-nav">
       <li>
         <a class="nav-link" href="./contacto.html">Contacto</a>
       </li>
@@ -66,16 +66,17 @@
   <!--
     Main del index. 
   -->
-  <main id="main-doc">
+  <main id="main-doc" class="main">
     <section class="main-section" id="com1">
-      <header>
+      <header id="com1-header" class="main-header">
         <h2>Comisión de Obras Res. S.E. N.º 1/2003</h2>
       </header>
       <!--
         Información sobre la comisión.
       -->
       <article>
-        <p>La Comisión de Obras Resolución S.E. N.º 1/2003, creada por Resolución S.E. N.º 86 del 30 de enero de
+        <p class="p-content">La Comisión de Obras Resolución S.E. N.º 1/2003, creada por Resolución S.E. N.º 86 del 30
+          de enero de
           2003,
           es
           un órgano asesor y ejecutor constituido en el ámbito de la Secretaría de Energía y presidido por el
@@ -85,7 +86,7 @@
         </p>
         <ul class="listas-article">
           <li>
-            <p>
+            <p class="p-content">
               En la evaluación de la pertinencia los anteproyectos de ingeniería, la factibilidad técnica
               y
               económica, y la prioridad de las Ampliaciones sometidas a su consideración en los términos
@@ -94,7 +95,7 @@
             </p>
           </li>
           <li>
-            <p>
+            <p class="p-content">
               En la determinación de los costos asociados a ingeniería, montaje, equipos y provisiones de
               las
               Ampliaciones, a los fines de la previsión presupuestaria.
@@ -112,27 +113,29 @@
             </p>
           </li>
         </ul>
-        <p>
+        <p class="p-content">
           Como órgano ejecutor, la Comisión realiza las gestiones de adquisición de materiales y equipos
           mayores
           como así también servicios de estudios, ingeniería, construcción y montaje a ser suscriptos por la
           COMPAÑIA ADMINISTRADORA DEL MERCADO MAYORISTA ELECTRICO SOCIEDAD ANÓNIMA
-          (<a href="https://cammesaweb.cammesa.com/" target="_blank">CAMMESA</a>), por cuenta y orden del ESTADO
+          (<a class="p-link" href="https://cammesaweb.cammesa.com/" target="_blank">CAMMESA</a>), por cuenta y orden del
+          ESTADO
           NACIONAL, y
           las tareas de inspección y certificación de los contratos.
         </p>
-      <!--
+        <!--
         Operatoria res1
       -->
       </article>
     </section>
     <hr>
     <section class="main-section" id="operatoria-res1">
-      <header>
-        <h2>Operatoria Resolución S.E. N.º 1/2003</h2>
+      <header id="operatoria-res1-header" class="main-header">
+        <h2 class="subtitulo-h2">Operatoria Resolución S.E. N.º 1/2003</h2>
       </header>
       <article>
-        <p>La Secretaría de Energía impulsó mediante la Resolución S.E. N.º 1/2003, un procedimiento para
+        <p class="p-content">La Secretaría de Energía impulsó mediante la Resolución S.E. N.º 1/2003, un procedimiento
+          para
           identificar y habilitar la realización de inversiones en el sector, promoviendo de una manera activa
           las ampliaciones que los Sistemas de Transporte requieren a los fines de preservar la calidad y la
           provisión del servicio.</p>
@@ -143,7 +146,8 @@
           Seguridad de Abastecimiento:
         </p>
         <h4 class="obras-habilitadas" id="obras-adecuacion">Obras de Adecuación:</h4>
-        <p>Las Obras de Adecuación apuntan a adecuar las instalaciones a los criterios y normas del “Reglamento
+        <p class="p-content">Las Obras de Adecuación apuntan a adecuar las instalaciones a los criterios y normas del
+          “Reglamento
           de Diseño y Calidad” de los Sistemas de Transporte, y presentan los siguientes beneficios:
         </p>
         <ul class="listas-article">
@@ -172,14 +176,14 @@
           </li>
         </ul>
         <h4 class="obras-habilitadas" id="obras-abastecimieto">Obras de Seguridad de Abastecimiento:</h4>
-        <p>
+        <p class="p-content">
           Las Obras de Seguridad de Abastecimiento minimizan las posibilidades de desabastecimiento prolongado
           en zonas especificas, permitiendo evitar, ante fallas eléctricas importantes, largos períodos (de
           varios días) de falta de servicio a áreas del país que no cuentan con reemplazo o vías alternativas
           de abastecimiento ante falla simple del equipamiento, tomando como criterio 30 % de energía no
           suministrada (ENS) durante un plazo de 10 dias.
         </p>
-        <p>
+        <p class="p-content">
           A partir del dictado de la Resolución S.E. N.º 821/2006 se ha incorporado dentro de la operatoria las
           obras
           que obedecen a la caracterización de Obras de Adecuación de Requerimiento de Demanda.
@@ -189,7 +193,7 @@
           Las Obras de Adecuación por Requerimiento de Demanda son las obras que apuntan a dotar de las
           instalaciones necesarias y suficientes para atender el crecimiento vegetativo de la demanda.
         </p>
-        <p>
+        <p class="p-content">
           El criterio de eligibilidad para estas obras se define en base a las proyecciones de demanda y los
           índices de disponibilidad de generación previstos al momento requerido de entrada en servicio de la
           obra, de forma tal de verificar que la porción de energía no suministrada durante las cincuenta (50)
@@ -203,16 +207,16 @@
       Operatoria res8
     -->
     <section class="main-section" id="operatoria-res821">
-      <header>
-        <h2>Operatoria Res. N.º 8/2006</h2>
+      <header id="operatoria-res8-header" class="main-header">
+        <h2 class="subtitulo-h2">Operatoria Res. N.º 8/2006</h2>
       </header>
       <article>
-        <p>
+        <p class="p-content">
           El dictado de la Resolución S.E. N.º 821/2006 introduce una nueva caracterización de obras a ser
           habilitadas mediante la metodología desarrollada en la Resolución S.E. N.º 1/2003 y sus
           modificatorias,
           constituída por las
-          <a href="#obras-por-req-demanda">Obras de Adecuación de Requerimiento de Demanda</a>.
+          <a href="#obras-demanda">Obras de Adecuación de Requerimiento de Demanda</a>.
         </p>
         Esta nueva caracterización presupone un marcado punto de inflexión respecto de la metodología vigente
         para las ampliaciones del Sistema de Transporte en Alta Tensión tendientes a la adecuación de demanda
@@ -220,7 +224,7 @@
         conjunto de la demanda del SADI, mientras el 30 % restante se distribuye entre los beneficiarios
         identificados mediante la metodología habitual.
         <h4>Financiación:</h4>
-        <p>
+        <p class="p-content">
           Con relación al financiamiento de las obras, se prevé que
           la jurisdicción o jurisdicciones provinciales (puede haber
           una presentación conjunta si la obra abarca el
@@ -233,7 +237,7 @@
           normal desenvolvimiento de la obra.
         </p>
         <h4>Requisitos de la Solicitud:</h4>
-        <p>
+        <p class="p-content">
           La solicitud deberá ser presentada por la jurisdicción provincial ante la Secretaría de Energía
           para
           su evaluación, conjuntamente con un informe de la
@@ -246,7 +250,7 @@
           <li>Tiempo estimado de ejecución</li>
           <li>Costo estimado de la obra</li>
         </ul>
-        <p>
+        <p class="p-content">
           Si la obra tiene afectación ambiental en zonas no impactadas (léase estaciones transformadoras
           existentes), y/o ocupa propiedades sujetas a ser afectadas a servidumbre de electroducto, se
           deberá
@@ -256,13 +260,14 @@
           efectación, se deberá celebrar una Audiencia Pública para dar la debida difusión a los aspectos
           ambientales
         </p>
-        <p>La solicitud de incorporación de la obra, una vez recepcionada por la Secretaría de Energía, será
+        <p class="p-content">La solicitud de incorporación de la obra, una vez recepcionada por la Secretaría de
+          Energía, será
           remitida al ORGANISMO ENCARGADO DEL DESPACHO (OED) para su evaluación de acuerdo al criterio
           arriba
           señalado, y posteriormente sera remitido al ENTE NACIONAL REGULADOR DE LA ELECTRICIDAD (ENRE)
           para
           recoger su opinión.</p>
-        <p>Contando con esta información y de acuerdo a la disponibilidad financiera, la Secretaría de
+        <p class="p-content">Contando con esta información y de acuerdo a la disponibilidad financiera, la Secretaría de
           Energía
           pasará a determinar si la obra es eligible para su habilitación, la que en caso positivo, se
           plasmara en un acto administrativo, señalando el monto presupuestario autorizado para la obra,
@@ -270,9 +275,10 @@
           será entendido como estimativo de referencia y máximo total a los efectos de los requerimientos
           de
           fondos.</p>
-        <p>Una vez habilitada, será de aplicación la metodología desarrollada a través del ejercicio de la
+        <p class="p-content">Una vez habilitada, será de aplicación la metodología desarrollada a través del ejercicio
+          de la
           Resolución S.E. N.º 1/2003 y sus modificatorias y complementarias.</p>
-        <p>La Comisión de Obras tendrá a su cargo la supervisión general del proyecto, determinando la
+        <p class="p-content">La Comisión de Obras tendrá a su cargo la supervisión general del proyecto, determinando la
           metodología de contratación más conveniente de acuerdo a las características de la obra en
           cuestión,
           y la situación vigente al momento de su realización.</p>
