--- a/licitaciones.html
+++ b/licitaciones.html
@@ -15,8 +15,8 @@
 
 <body>
     <section class="main-section" id="licitaciones">
-        <header>
-            <h2>Licitaciones</h2>
+        <header id="licitaciones-header" class="main-header">
+            <h2 class="subtitulo-h2">Licitaciones</h2>
         </header>
         <article>
             <p>Lorena ipsum</p>
