Correcciones en asignación de clases

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       </li>
       <li>
         <a class="nav-link" href="#obras-adecuacion">
-          <span class="link-span">Obras de adecuacion</span>
+          <span class="nav-sub-link-span">Obras de adecuacion</span>
         </a>
       </li>
       <li>
         <a class="nav-link" href="#obras-abastecimieto">
-          <span class="link-span">Obras de seguridad de abastecimiento</span>
+          <span class="nav-sub-link-span">Obras de seguridad de abastecimiento</span>
         </a>
       </li>
       <li>
         <a class="nav-link" href="#obras-demanda">
-          <span class="link-span">Obras por Requerimiento de Demanda</span>
+          <span class="nav-sub-link-span">Obras por Requerimiento de Demanda</span>
         </a>
       </li>
       <li>
@@ -69,7 +69,7 @@
   <main id="main-doc" class="main">
     <section class="main-section" id="com1">
       <header id="com1-header" class="main-header">
-        <h2>Comisión de Obras Res. S.E. N.º 1/2003</h2>
+        <h2 class="subtitulo-h2">Comisión de Obras Res. S.E. N.º 1/2003</h2>
       </header>
       <!--
         Información sobre la comisión.
@@ -140,12 +140,12 @@
           las ampliaciones que los Sistemas de Transporte requieren a los fines de preservar la calidad y la
           provisión del servicio.</p>
 
-        <p>
+        <p class="p-content">
           Las obras que se habilitan mediante la operatoria Resolución S.E. N.º 1/2003 y sus modificatorias y
           complementarias obedecen a dos necesidades, y se caracterizan como Obras de Adecuación y Obras de
           Seguridad de Abastecimiento:
         </p>
-        <h4 class="obras-habilitadas" id="obras-adecuacion">Obras de Adecuación:</h4>
+        <h4 id="obras-adecuacion" class="subtitulo-h4">Obras de Adecuación:</h4>
         <p class="p-content">Las Obras de Adecuación apuntan a adecuar las instalaciones a los criterios y normas del
           “Reglamento
           de Diseño y Calidad” de los Sistemas de Transporte, y presentan los siguientes beneficios:
@@ -175,7 +175,7 @@
             Evitar el apagón total de algunas zonas ante fallas en equipos pertenecientes a estas redes.
           </li>
         </ul>
-        <h4 class="obras-habilitadas" id="obras-abastecimieto">Obras de Seguridad de Abastecimiento:</h4>
+        <h4 id="obras-abastecimieto" class="subtitulo-h4">Obras de Seguridad de Abastecimiento:</h4>
         <p class="p-content">
           Las Obras de Seguridad de Abastecimiento minimizan las posibilidades de desabastecimiento prolongado
           en zonas especificas, permitiendo evitar, ante fallas eléctricas importantes, largos períodos (de
@@ -188,8 +188,8 @@
           obras
           que obedecen a la caracterización de Obras de Adecuación de Requerimiento de Demanda.
         </p>
-        <h4 class="obras-habilitadas" id="obras-demanda">Obras por Requerimiento de Demanda:</h4>
-        <p>
+        <h4 id="obras-demanda"  class="subtitulo-h4">Obras por Requerimiento de Demanda:</h4>
+        <p class="p-content">
           Las Obras de Adecuación por Requerimiento de Demanda son las obras que apuntan a dotar de las
           instalaciones necesarias y suficientes para atender el crecimiento vegetativo de la demanda.
         </p>
@@ -223,7 +223,7 @@
         o suficiencia, al distribuir de manera substancial (70 %) los costos de realización de las mismas al
         conjunto de la demanda del SADI, mientras el 30 % restante se distribuye entre los beneficiarios
         identificados mediante la metodología habitual.
-        <h4>Financiación:</h4>
+        <h4 class="subtitulo-h4">Financiación:</h4>
         <p class="p-content">
           Con relación al financiamiento de las obras, se prevé que
           la jurisdicción o jurisdicciones provinciales (puede haber
@@ -236,7 +236,7 @@
           de dichos fondos no altere el flujo de caja previsto para el
           normal desenvolvimiento de la obra.
         </p>
-        <h4>Requisitos de la Solicitud:</h4>
+        <h4 class="subtitulo-h4">Requisitos de la Solicitud:</h4>
         <p class="p-content">
           La solicitud deberá ser presentada por la jurisdicción provincial ante la Secretaría de Energía
           para
