Correcciones en asignación de clases

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   Hacer que ocupe todo el lado izquierdo.
   media-query: Que aparezca arriba.
 -->
-  <nav id="navbar">
+  <nav id="navbar" class="nav-bar">
     <header id="documentacion-header" class="nav-header">Documentación</header>
     <ul class="ul-nav">
       <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
