--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a class="nav-link" href="#operatoria-res821">Operatoria Res. S.E. N.º 8/2006<a>
+                <a class="nav-link" href="#operatoria-res821">Operatoria Res. S.E. N.º 8/2006</a>
             </li>
 
             <li><a class="nav-link" href="#financiacion-y-pago">Financiación y pago</a></li>
@@ -331,18 +331,24 @@
                 <h2>Contacto</h2>
             </header>
             <article>
-                <p>Comisión de Obras Res. N.º 1/2003</p>
-                <p>Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
-                <p>Tel: +54 11 4319-3746</p>
-                <p>
-                    Av. Eduardo Madero 942, 16.º, dcha.<br>
-                    (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
-                    Argentina
-                </p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3029820926163!2d-58.3704812!3d-34.5964993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33535243d9557%3A0xa2903aff993ac8dc!2sAv.%20Eduardo%20Madero%20942%2C%20C1106%20CABA!5e0!3m2!1ses!2sar!4v1656085119722!5m2!1ses!2sar"
-                    width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div id="contacto-container">
+                    <div id="datos-contacto-container">
+                        <p>Comisión de Obras Res. N.º 1/2003</p>
+                        <p>Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)</p>
+                        <p>Tel: +54 11 4319-3746</p>
+                        <p>
+                            Av. Eduardo Madero 942, 16.º, dcha.<br>
+                            (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
+                            Argentina
+                        </p>
+                    </div>
+                    <div id="mapa-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3029820926163!2d-58.3704812!3d-34.5964993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33535243d9557%3A0xa2903aff993ac8dc!2sAv.%20Eduardo%20Madero%20942%2C%20C1106%20CABA!5e0!3m2!1ses!2sar!4v1656085119722!5m2!1ses!2sar"
+                            width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
             
             </article>
         </section>
