--- a/licitaciones.html
+++ b/licitaciones.html
@@ -10,26 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
-    <title>Licitaciones en curso</title>
+    <title>Comisión de Obras Res.1/2003</title>
 </head>
 
 <body>
-    <section class="main-section" id="licitaciones">
-        <header id="licitaciones-header" class="main-header">
-            <h2 class="subtitulo-h2">Licitaciones</h2>
-        </header>
-        <article>
-            <p>Lorena ipsum</p>
-            <!--
-                Agregar la tabla con las licitaciones en curso
-            -->
-        </article>
-    </section>
+
 </body>
 <footer>
-    <a href="./index.html">
-        Volver
-    </a>
+
 </footer>
 
 </html>
