--- a/index.html
+++ b/index.html
@@ -10,280 +10,33 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
-  <title>App Licitaciones</title>
+  <title>Comisión de Obras Res.1/2003</title>
 </head>
 
 <body>
-  <!--
-  Barra de navegación. 
-  Hacer que ocupe todo el lado izquierdo.
-  media-query: Que aparezca arriba.
--->
-  <nav id="navbar" class="nav-bar">
-    <header id="documentacion-header" class="nav-header">Documentación</header>
-    <ul class="ul-nav">
-      <li><a class="nav-link" href="#com1">Comisión de Obras</a></li>
-      <li>
-        <a class="nav-link" href="#operatoria-res1">Operatoria Res. S.E. N.º 1/2003</a>
-      </li>
-      <li>
-        <a class="nav-link" href="#obras-adecuacion">
-          <span class="nav-sub-link-span">Obras de adecuacion</span>
-        </a>
-      </li>
-      <li>
-        <a class="nav-link" href="#obras-abastecimieto">
-          <span class="nav-sub-link-span">Obras de seguridad de abastecimiento</span>
-        </a>
-      </li>
-      <li>
-        <a class="nav-link" href="#obras-demanda">
-          <span class="nav-sub-link-span">Obras por Requerimiento de Demanda</span>
-        </a>
-      </li>
-      <li>
-        <a class="nav-link" href="#operatoria-res821">Operatoria Res. S.E. N.º 8/2006<a>
-      </li>
-    </ul>
-    <header id="financiamiento-header" class="nav-header">Financiamiento</header>
-    <ul class="ul-nav">
-      <li><a class="nav-link" href="./financiacion.html">Financiación y pago</a></li>
-    </ul>
-    <header id="licitaciones-header" class="nav-header">Licitaciones en curso</header>
-    <ul class="ul-nav">
-      <li>
-        <a class="nav-link" href="./licitaciones.html">Licitaciones</a>
-      </li>
-    </ul>
-    <header id="contacto-header" class="nav-header">Contacto</header>
-    <ul class="ul-nav">
-      <li>
-        <a class="nav-link" href="./contacto.html">Contacto</a>
-      </li>
-    </ul>
-  </nav>
-
-  <!--
-    Main del index. 
-  -->
-  <main id="main-doc" class="main">
-    <section class="main-section" id="com1">
-      <header id="com1-header" class="main-header">
-        <h2 class="subtitulo-h2">Comisión de Obras Res. S.E. N.º 1/2003</h2>
-      </header>
-      <!--
-        Información sobre la comisión.
-      -->
-      <article>
-        <p class="p-content">La Comisión de Obras Resolución S.E. N.º 1/2003, creada por Resolución S.E. N.º 86 del 30
-          de enero de
-          2003,
-          es
-          un órgano asesor y ejecutor constituido en el ámbito de la Secretaría de Energía y presidido por el
-          Señor Subsecretarío de Energía Eléctrica. Como organo asesor sus funciones son asesorar a la
-          referida
-          Secretaría en la siguiente temática de su competencia:
-        </p>
-        <ul class="listas-article">
-          <li>
-            <p class="p-content">
-              En la evaluación de la pertinencia los anteproyectos de ingeniería, la factibilidad técnica
-              y
-              económica, y la prioridad de las Ampliaciones sometidas a su consideración en los términos
-              de la
-              Resolución S.E. N.º 1/2003 y resoluciones concordantes y complementarias.
-            </p>
-          </li>
-          <li>
-            <p class="p-content">
-              En la determinación de los costos asociados a ingeniería, montaje, equipos y provisiones de
-              las
-              Ampliaciones, a los fines de la previsión presupuestaria.
-            </p>
-          </li>
-          <li>
-            <p>
-              En la definición de los procedimientos de contratación más adecuados para la concreción de
-              las
-              Ampliaciones a efectos de preservar las responsabilidades de los actores del MERCADO
-              ELECTRICO MAYORISTA
-              (MEM), realizar el seguimiento de los mismos para garantizar la debida publicidad y
-              transparencia del
-              proceso y obtener el máximo provecho de los recursos disponibles.
-            </p>
-          </li>
-        </ul>
-        <p class="p-content">
-          Como órgano ejecutor, la Comisión realiza las gestiones de adquisición de materiales y equipos
-          mayores
-          como así también servicios de estudios, ingeniería, construcción y montaje a ser suscriptos por la
-          COMPAÑIA ADMINISTRADORA DEL MERCADO MAYORISTA ELECTRICO SOCIEDAD ANÓNIMA
-          (<a class="p-link" href="https://cammesaweb.cammesa.com/" target="_blank">CAMMESA</a>), por cuenta y orden del
-          ESTADO
-          NACIONAL, y
-          las tareas de inspección y certificación de los contratos.
-        </p>
-        <!--
-        Operatoria res1
-      -->
-      </article>
-    </section>
-    <hr>
-    <section class="main-section" id="operatoria-res1">
-      <header id="operatoria-res1-header" class="main-header">
-        <h2 class="subtitulo-h2">Operatoria Resolución S.E. N.º 1/2003</h2>
-      </header>
-      <article>
-        <p class="p-content">La Secretaría de Energía impulsó mediante la Resolución S.E. N.º 1/2003, un procedimiento
-          para
-          identificar y habilitar la realización de inversiones en el sector, promoviendo de una manera activa
-          las ampliaciones que los Sistemas de Transporte requieren a los fines de preservar la calidad y la
-          provisión del servicio.</p>
-
-        <p class="p-content">
-          Las obras que se habilitan mediante la operatoria Resolución S.E. N.º 1/2003 y sus modificatorias y
-          complementarias obedecen a dos necesidades, y se caracterizan como Obras de Adecuación y Obras de
-          Seguridad de Abastecimiento:
-        </p>
-        <h4 id="obras-adecuacion" class="subtitulo-h4">Obras de Adecuación:</h4>
-        <p class="p-content">Las Obras de Adecuación apuntan a adecuar las instalaciones a los criterios y normas del
-          “Reglamento
-          de Diseño y Calidad” de los Sistemas de Transporte, y presentan los siguientes beneficios:
-        </p>
-        <ul class="listas-article">
-          <li>
-            Mejorar la calidad del producto entregado a los usuarios, operando con niveles de tensión
-            uniformes y dentro de una banda más estrecha haciendo más estable las condiciones de alta
-            transmisión.
-          </li>
-          <li>
-            Disminuir las posibilidades de fallas que pueden afectar a los usuarios con cortes parciales de
-            suministro eléctrico en todo el SADI, operando con mayor seguridad algunas estaciones
-            transformadoras de la red de Alta Tensión.
-          </li>
-          <li>
-            Disminuir las maniobras de desconexión y conexión de líneas que se deben realizar diariamente en
-            las horas de madrugada cuando el sistema de transmisión transfiere bajos niveles de energía
-            eléctrica.
-          </li>
-          <li>Mejorar las condiciones de transmisión y disminuir los niveles de Desconexión de Generación
-            (DAG)
-            ante contingencias, y como consecuencia también se reducirán los niveles de corte de demanda,
-            otorgando mayor calidad de suministro.
-          </li>
-          <li>
-            Evitar el apagón total de algunas zonas ante fallas en equipos pertenecientes a estas redes.
-          </li>
-        </ul>
-        <h4 id="obras-abastecimieto" class="subtitulo-h4">Obras de Seguridad de Abastecimiento:</h4>
-        <p class="p-content">
-          Las Obras de Seguridad de Abastecimiento minimizan las posibilidades de desabastecimiento prolongado
-          en zonas especificas, permitiendo evitar, ante fallas eléctricas importantes, largos períodos (de
-          varios días) de falta de servicio a áreas del país que no cuentan con reemplazo o vías alternativas
-          de abastecimiento ante falla simple del equipamiento, tomando como criterio 30 % de energía no
-          suministrada (ENS) durante un plazo de 10 dias.
-        </p>
-        <p class="p-content">
-          A partir del dictado de la Resolución S.E. N.º 821/2006 se ha incorporado dentro de la operatoria las
-          obras
-          que obedecen a la caracterización de Obras de Adecuación de Requerimiento de Demanda.
-        </p>
-        <h4 id="obras-demanda"  class="subtitulo-h4">Obras por Requerimiento de Demanda:</h4>
-        <p class="p-content">
-          Las Obras de Adecuación por Requerimiento de Demanda son las obras que apuntan a dotar de las
-          instalaciones necesarias y suficientes para atender el crecimiento vegetativo de la demanda.
-        </p>
-        <p class="p-content">
-          El criterio de eligibilidad para estas obras se define en base a las proyecciones de demanda y los
-          índices de disponibilidad de generación previstos al momento requerido de entrada en servicio de la
-          obra, de forma tal de verificar que la porción de energía no suministrada durante las cincuenta (50)
-          horas de mayor demanda en escenarios de invierno y verano, sin la incorporación de la obra candidata
-          , supere el cinco por ciento (5 %) de la energía total abastecida en ese punto de alimentación.
-        </p>
-      </article>
-    </section>
-    <hr>
-    <!--
-      Operatoria res8
-    -->
-    <section class="main-section" id="operatoria-res821">
-      <header id="operatoria-res8-header" class="main-header">
-        <h2 class="subtitulo-h2">Operatoria Res. N.º 8/2006</h2>
-      </header>
-      <article>
-        <p class="p-content">
-          El dictado de la Resolución S.E. N.º 821/2006 introduce una nueva caracterización de obras a ser
-          habilitadas mediante la metodología desarrollada en la Resolución S.E. N.º 1/2003 y sus
-          modificatorias,
-          constituída por las
-          <a href="#obras-demanda">Obras de Adecuación de Requerimiento de Demanda</a>.
-        </p>
-        Esta nueva caracterización presupone un marcado punto de inflexión respecto de la metodología vigente
-        para las ampliaciones del Sistema de Transporte en Alta Tensión tendientes a la adecuación de demanda
-        o suficiencia, al distribuir de manera substancial (70 %) los costos de realización de las mismas al
-        conjunto de la demanda del SADI, mientras el 30 % restante se distribuye entre los beneficiarios
-        identificados mediante la metodología habitual.
-        <h4 class="subtitulo-h4">Financiación:</h4>
-        <p class="p-content">
-          Con relación al financiamiento de las obras, se prevé que
-          la jurisdicción o jurisdicciones provinciales (puede haber
-          una presentación conjunta si la obra abarca el
-          abastecimiento de más de una provincia) esta dispuesta a
-          aportar el 30 % del monto contratado de obra al momento de
-          la firma del contrato, o en su defecto, garantizarlo en
-          forma irrevocable mediante la cesión de fondos u otros
-          mecanismos, y en la medida que la cadencia de disponibilidad
-          de dichos fondos no altere el flujo de caja previsto para el
-          normal desenvolvimiento de la obra.
-        </p>
-        <h4 class="subtitulo-h4">Requisitos de la Solicitud:</h4>
-        <p class="p-content">
-          La solicitud deberá ser presentada por la jurisdicción provincial ante la Secretaría de Energía
-          para
-          su evaluación, conjuntamente con un informe de la
-          Transportista en Alta Tensión que incluya como mínimo:
-        </p>
-        <ul class="listas-article">
-          <li>Descripción de la Obra</li>
-          <li>Justificación de las causas por las cuales se propone su ejecución</li>
-          <li>Fecha en que se hace necesaria</li>
-          <li>Tiempo estimado de ejecución</li>
-          <li>Costo estimado de la obra</li>
-        </ul>
-        <p class="p-content">
-          Si la obra tiene afectación ambiental en zonas no impactadas (léase estaciones transformadoras
-          existentes), y/o ocupa propiedades sujetas a ser afectadas a servidumbre de electroducto, se
-          deberá
-          presentar la correspondiente información, y se procederá a realizar el Estudio de Impacto
-          Ambiental
-          (EIA) de acuerdo a la reglamentación vigente, previo a su tratamiento. Asimismo, de tener esta
-          efectación, se deberá celebrar una Audiencia Pública para dar la debida difusión a los aspectos
-          ambientales
-        </p>
-        <p class="p-content">La solicitud de incorporación de la obra, una vez recepcionada por la Secretaría de
-          Energía, será
-          remitida al ORGANISMO ENCARGADO DEL DESPACHO (OED) para su evaluación de acuerdo al criterio
-          arriba
-          señalado, y posteriormente sera remitido al ENTE NACIONAL REGULADOR DE LA ELECTRICIDAD (ENRE)
-          para
-          recoger su opinión.</p>
-        <p class="p-content">Contando con esta información y de acuerdo a la disponibilidad financiera, la Secretaría de
-          Energía
-          pasará a determinar si la obra es eligible para su habilitación, la que en caso positivo, se
-          plasmara en un acto administrativo, señalando el monto presupuestario autorizado para la obra,
-          que
-          será entendido como estimativo de referencia y máximo total a los efectos de los requerimientos
-          de
-          fondos.</p>
-        <p class="p-content">Una vez habilitada, será de aplicación la metodología desarrollada a través del ejercicio
-          de la
-          Resolución S.E. N.º 1/2003 y sus modificatorias y complementarias.</p>
-        <p class="p-content">La Comisión de Obras tendrá a su cargo la supervisión general del proyecto, determinando la
-          metodología de contratación más conveniente de acuerdo a las características de la obra en
-          cuestión,
-          y la situación vigente al momento de su realización.</p>
-      </article>
+  <nav><div id="nav-logo"></div></nav>
+  <main>
+    <div id="hero"></div>
+    <div id="main-content">
+      <div id="cards-content">
+        <div class="card-raviol">
+          <div class="card-text"></div>
+        </div>
+        <div class="card-raviol">
+          <div class="card-text"></div>
+        </div>
+        <div class="card-raviol">
+          <div class="card-text"></div>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
+<foot>
+  <div id="footer-content">
+    <div class="logo-container"></div>
+    <div class="contact-container"></div>
+  </div>
+</foot>
 
 </html>
