Practicando hacer cards en CSS: Forma, display y sus componentes.

--- a/index.html
+++ b/index.html
@@ -13,27 +13,45 @@
   <title>Comisión de Obras Res.1/2003</title>
 </head>
 
+<header>
+  <nav>
+    <div class="nav-header"><h1>Nav bar</h1></div>
+  </nav>
+</header>
+
 <body>
-  <nav><div id="nav-logo"></div></nav>
   <main>
-    <div id="hero"></div>
+    <section class="bar-and-hero">
+      <div id="bar"></div>
+      <div id="hero"></div>
+    </section class="hero">
     <div id="main-content">
-      <div id="cards-content">
+      <div class="cards-container">
         <div class="card-raviol">
-          <div class="card-text"></div>
+          <div class="card-head"></div>
+          <div class="card-text">
+            <p>Hola 1</p>
+          </div>
         </div>
         <div class="card-raviol">
-          <div class="card-text"></div>
+          <div class="card-head"></div>
+          <div class="card-text">
+            <p>Hola 2</p>
+          </div>
         </div>
         <div class="card-raviol">
-          <div class="card-text"></div>
+          <div class="card-head"></div>
+          <div class="card-text">
+            <p>Hola 3</p>
+          </div>
         </div>
       </div>
     </div>
   </main>
 </body>
 <foot>
-  <div id="footer-content">
+  <div class="footer">
+    <div class="texto-de-prueba"><h2>Footer</h2></div>
     <div class="logo-container"></div>
     <div class="contact-container"></div>
   </div>
