Perfeccionando el estilo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <header>
   <nav>
-    <div class="nav-header"><h1>Nav bar</h1></div>
+    <div class="nav-header">
+      <h1>Nav bar</h1>
+    </div>
   </nav>
 </header>
 
@@ -23,7 +25,11 @@
   <main>
     <section class="bar-and-hero">
       <div id="bar"></div>
-      <div id="hero"></div>
+      <div class="hero" >
+        <img class="hero-image"
+          src="https://lh3.googleusercontent.com/FlXZbHk6KUsDCCM_tJM9aj-N9HYioTo9T-m11U_55jM3KvlJ3URMAix9H3b3gND9DrWPAlQ5Tt-3hclReo7gpUqSxuZd2NHn5oH-mRDAUuth2DQaK2cmEoUothMrzFCusFGvtbQDpkgiMz8JjcQy6yDmYIBBfIpHn7N-I5h2P09h1zkv_RGFmZNUzPdfIxr0lZ3wWQrqHqIWbBrShiXl74ROroGut5XahHluz63tSJ_Duv7RAhNa6m8cVqzSG86YzCLtzWbq5m57DMIEBWM5z-DDmxD5d_AdDBmkcpntuNZZy6vW2WWuY0fHhn17VR1sayFyUXM3_aotfYeBfwsTPILYQdyG0OFIODJkvzjMqFz5wXaG4MAGBsd40OJYQrfhvOrPfQnB9cwyittZxjDo7-sLOMy9s6ebY5kystSPYqOnskmp7D13yCPbIt4avZMvOpYfS21HZMc2CmLd89p3pJQDSXXwZhSa8SH9hYhCduzxgbGLAoCfzJxYbFh8kok7ZP2QqyCO2G1MplMj-9kNNEF5VRRN78P1AIFpXGiucQuU8KfZLSbjo9f45kte7KUcpHPYkm5I47ilRo4HNCDPMym-tpxl9TBf7tv8kkz1ETst-cxz1HClrXV1Tu1H0CP8uyCYUntHeizZ_SGorfexS3zh5pMsgG2utW2baDvh4S9QR3ywTNZzWzArk01k3WgLHu7P1F4sRFozoe40yfouLXqcb_b_0uY8MGtAoYKP69H1qHyFkPjrHwHOkK9m=w1322-h454-no?authuser=0" 
+          />
+      </div>
     </section class="hero">
     <div id="main-content">
       <div class="cards-container">
@@ -51,9 +57,24 @@
 </body>
 <foot>
   <div class="footer">
-    <div class="texto-de-prueba"><h2>Footer</h2></div>
-    <div class="logo-container"></div>
-    <div class="contact-container"></div>
+    <div class="logo-container">
+      <img class="footer-logo"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Coat_of_arms_of_Argentina.svg/1448px-Coat_of_arms_of_Argentina.svg.png"
+        alt="Logo de Argentina" />
+    </div>
+    <div class="texto-de-prueba">
+      <h2>Footer</h2>
+    </div>
+    <div class="contact-container">
+      <p>
+        Comisión de Obras Res. N.º 1/2003<br>
+        Fideicomiso Obras Transporte para Abastecimiento Eléctrico (FOTAE)<br>
+        Tel: +54 11 4319-3746<br>
+        Av. Eduardo Madero 942, 16.º, dcha.<br>
+        (C1106ACW) Ciudad Autónoma de Buenos Aires<br>
+        Argentina<br>
+      </p>
+    </div>
   </div>
 </foot>
 
